--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-    "name": "application-name"
+    "name": "powertowers"
   , "version": "0.0.1"
   , "private": true
   , "dependencies": {
       "express": "*"
     , "jade": ">= 0.0.1"
     , "xml2json": "*"
+  },
+  "engines": {
+    "node": "0.10.x",
+    "npm": "1.2.x"
   }
 }
